# fiuncho

./: .travis.yml  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  btable.cpp  ctable.cpp  gtable.cpp  mi.cpp  threadedsearch.cpp
cmake/: FindAVX.cmake  FindGFlags.cmake
docs/: CMakeLists.txt  conf.py  index.rst  installation-and-usage.rst  license.rst  technical-doc.rst
include/fiuncho/: ContingencyTable.h  Definitions.h.in  Distribution.h  Distributor.h  GenotypeTable.h  MPIEngine.h  Search.h  ThreadedSearch.h
include/fiuncho/algorithms/: MutualInformation.h
include/fiuncho/dataset/: Dataset.h
include/fiuncho/engine/: Algorithm.h  BitTable.h  Distributor.h  MPIEngine.h  Result.h  Search.h  ThreadedSearch.h
include/fiuncho/engine/algorithms/: MutualInformation.h
include/fiuncho/utils/: MaxArray.h  Node_information.h  StaticStack.h
scripts/: travis-build.sh
src/: CMakeLists.txt
src/cpu/256_avx2/: BitTable.cpp  ContingencyTable.cpp  MutualInformation.cpp
src/cpu/512_avx512bw/: BitTable.cpp  ContingencyTable.cpp  MutualInformation.cpp
src/cpu/avx2/: BitTable.cpp  MutualInformation.cpp
src/cpu/avx512f256/: MutualInformation.cpp
src/cpu/avx512f512/: MutualInformation.cpp
src/cpu/base/: BitTable.cpp  ContingencyTable.cpp  MutualInformation.cpp
src/utils/: Node_information.cpp
tests/: CMakeLists.txt  bittable.cpp  dataset.cpp  genotypetable.cpp  mi.cpp  mpiengine.cpp  threadedsearch.cpp  utils.h
